[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = "0.8"          # برای ساخت ربات تلگرام
tokio = { version = "1", features = ["full"] }  # برای کار با asynchronous
serde = { version = "1.0", features = ["derive"] }  # برای کار با داده‌های JSON
sqlite = "0.26"            # برای استفاده از پایگاه داده SQLite
dotenv = "0.15"            # برای بارگذاری متغیرهای محیطی (توکن ربات)
teloxide-serialization = "0.4" # برای کار با داده‌های JSON در تلگرام
